[package]
name = "ohy"
version = "0.1.0"
authors = ["funohy <rustohy@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ohyfun/ohy"
categories = ["command-line-utilities"]
keywords = ["webview", "desktop", "app"]
description = "a lightweight command-line tool that converts web into desktop app"

[dependencies]
wry = { version = "0.48", default-features = false, features = [
    "os-webview",
    "protocol",
    "drag-drop",
] }
tao = { version = "0.31", features = ["rwh_05"] }
argh = "0.1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking"] }
image = { version = "0.25", features = ["png"] }
anyhow = "1.0"
md5 = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
wry = { version = "0.48", features = [
    "os-webview",
    "protocol",
    "drag-drop",
    "linux-body",
] }

[profile.release]
incremental = true
debug = 0
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
