[package]
name = "ohy"
version = "0.1.1"
authors = ["funohy <rustohy@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ohyfun/ohy"
categories = ["command-line-utilities"]
keywords = ["webview", "desktop", "app"]
description = "a lightweight command-line tool that converts web into desktop app"

[dependencies]
tao = "0.34"
wry = "0.53"
argh = "0.1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking"] }
image = { version = "0.25", features = ["png"] }
anyhow = "1.0"
md5 = "0.7"

[profile.release]
incremental = true
debug = 0
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
